load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project", "ts_config")
load("@npm//@bazel/esbuild:index.bzl", "esbuild")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

# Typescript compiler inputs must be within our package. Copy it over.
genrule(
    name = "wasm_exec_copy",
    srcs = ["@go_sdk//:misc/wasm/wasm_exec.js"],
    outs = ["wasm_exec.js"],
    cmd = "cat $(location @go_sdk//:misc/wasm/wasm_exec.js) > $@",
)

# Treat wasm_exec and types as a library.
js_library(
	name = "wasm_exec",
	srcs = [
		":wasm_exec.js",
		"wasm_exec.d.ts",
	],
)

ts_project(
    name = "app",
    srcs = ["app.ts"],
    deps = [
	    ":wasm_exec",
	    "@npm//@types/chrome:chrome",
    ],
    declaration = True,
)

ts_project(
    name = "background",
    srcs = ["background.ts"],
    deps = [
    ":app",
	    "@npm//@types/chrome:chrome",
    ],
    declaration = True,
)

esbuild(
	name = "background-bundle",
	entry_point = "background.ts",
	deps = [":background"],
)

ts_project(
    name = "options",
    srcs = ["options.ts"],
    deps = [
    ":app",
	    "@npm//@types/chrome:chrome",
    ],
    declaration = True,
)

# See https://esbuild.github.io/content-types/#typescript-caveats for additional
# settings that we tweak in tsconfig.json. Specifically:
#  isolatedModules = true
#  esModuleInterop = true
esbuild(
	name = "options-bundle",
	entry_point = "options.ts",
	deps = [":options"],
)

filegroup(
    name = "optionsui",
    srcs = [
	":background-bundle.js",
	":background-bundle.js.map",
        "options.html",
	":options-bundle.js",
	":options-bundle.js.map",
        "style.css",
    ],
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "pkg_files",
    srcs = [
        ":optionsui",
    ],
)

pkg_filegroup(
    name = "pkg",
    srcs = [
        ":pkg_files",
    ],
    prefix = "/html",
    visibility = ["//visibility:public"],
)
