load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "publish",
    data = [
        "//:chrome-ssh-agent.zip",
        "@npm//@bazel/runfiles",
        "@npm//chrome-webstore-upload",
    ],
    entry_point = ":publish.mjs",
    # Workaround for https://github.com/bazelbuild/rules_nodejs/issues/3393.
    templated_args = ["--node_options=--preserve-symlinks-main"],
)
