load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "test",
    srcs = [
        "e2e.go",
        "extension.go",
    ],
    importpath = "github.com/google/chrome-ssh-agent/test",
    deps = [
        "@com_github_tebeka_selenium//:selenium",
        "@com_github_tebeka_selenium//log",
        "@com_github_tebeka_selenium//chrome",
        "@io_bazel_rules_go//go/tools/bazel",
	"//tools:tools",
    ],
    data = [
        "//:chrome-ssh-agent.zip",
        "@chromedriver//:chromedriver",
        "@chromium//:chromium",
    ],
)

