load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "agentport",
    srcs = ["io.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/agentport",
    visibility = ["//visibility:public"],
    deps = [
        "//go/dom",
        "@com_github_norunners_vert//:vert",
    ],
)
