load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "agentport",
    srcs = ["io.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/agentport",
    visibility = ["//visibility:public"],
    deps = select({
        "@rules_go//go/platform:js": [
            "//go/jsutil",
            "@com_github_norunners_vert//:vert",
        ],
        "//conditions:default": [],
    }),
)
