load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "chrome",
    srcs = [
        "bigstorage.go",
        "chrome.go",
        "storage.go",
        "typedstorage.go",
    ],
    importpath = "github.com/google/chrome-ssh-agent/go/chrome",
    visibility = ["//visibility:public"],
    deps = [
        "//go/dom",
        "@com_github_norunners_vert//:vert",
    ],
)

go_library(
    name = "chrome_testlib",
    testonly = True,
    srcs = [
        "bigstorage_test.go",
        "storage_test.go",
        "typedstorage_test.go",
    ],
    embed = [":chrome"],
    importpath = "github.com/google/chrome-ssh-agent/go/chrome",
    deps = [
        "//go/chrome/fakes",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_norunners_vert//:vert",
    ],
)

go_wasm_test(
    name = "chrome_test",
    testlib = ":chrome_testlib",
)
