load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "dom",
    srcs = [
        "dom.go",
        "url.go",
    ],
    importpath = "github.com/google/chrome-ssh-agent/go/dom",
    visibility = ["//visibility:public"],
    deps = ["//go/jsutil"],
)

go_wasm_test(
    name = "dom_test",
    srcs = [
        "dom_test.go",
        "url_test.go",
    ],
    embed = [":dom"],
    node_deps = [
        "//:node_modules/jsdom",
        "//:node_modules/@ungap/url-search-params",
    ],
    deps = [
        "//go/dom/testing",
        "@com_github_google_go_cmp//cmp",
    ],
)
