load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "jsutil",
    srcs = [
        "func.go",
        "json.go",
        "log.go",
        "object.go",
        "promise.go",
    ],
    importpath = "github.com/google/chrome-ssh-agent/go/jsutil",
    visibility = ["//visibility:public"],
)

go_wasm_test(
    name = "jsutil_test",
    srcs = [
        "func_test.go",
        "json_test.go",
        "object_test.go",
        "promise_test.go",
    ],
    embed = [":jsutil"],
    deps = [
        "@com_github_google_go_cmp//cmp",
    ],
)
