load("//build_defs:wasm.bzl", "go_wasm_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "keys",
    srcs = [
        "client.go",
        "manager.go",
    ],
    importpath = "github.com/google/chrome-ssh-agent/go/keys",
    visibility = ["//visibility:public"],
    deps = [
        "//go/jsutil",
        "//go/message",
        "//go/storage",
        "@com_github_norunners_vert//:vert",
        "@com_github_youmark_pkcs8//:pkcs8",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
    ],
)

go_wasm_test(
    name = "keys_test",
    srcs = [
        "client_test.go",
        "common_test.go",
        "manager_test.go",
    ],
    embed = [":keys"],
    deps = [
        "//go/jsutil/testing",
        "//go/keys/testdata",
        "//go/message/fakes",
        "//go/storage/fakes",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
    ],
)
