load("@rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "lock",
    srcs = ["lock.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/lock",
    visibility = ["//visibility:public"],
    deps = select({
        "@rules_go//go/platform:js": [
            "//go/jsutil",
        ],
        "//conditions:default": [],
    }),
)

go_wasm_test(
    name = "lock_test",
    srcs = ["lock_test.go"],
    embed = [":lock"],
    node_deps = [
        "//:node_modules/web-locks",
    ],
    deps = [
        "//go/dom/testing",
        "//go/jsutil",
        "//go/jsutil/testing",
        "@com_github_google_go_cmp//cmp",
    ],
)
