load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

go_library(
    name = "options_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/options",
    visibility = ["//visibility:private"],
    deps = [
        "//go/chrome",
        "//go/dom",
        "//go/keys",
        "//go/optionsui",
        "//go/testing",
    ],
)

go_binary(
    name = "options",
    out = "options.wasm",
    embed = [":options_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:private"],
)

pkg_files(
    name = "pkg_files",
    srcs = [
        ":options",
    ],
)

pkg_filegroup(
    name = "pkg",
    srcs = [
        ":pkg_files",
    ],
    prefix = "/go/options",
    visibility = ["//visibility:public"],
)
