load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "optionsui",
    srcs = ["ui.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/optionsui",
    visibility = ["//visibility:public"],
    deps = [
        "//go/dom:dom",
        "//go/keys:keys",
        "//go/keys/testdata",
        "@com_github_google_go_cmp//cmp",
    ],
)

go_library(
    name = "optionsui_testlib",
    srcs = [
        "ui_test.go",
    ],
    data = [
	    "//html:optionsui",
    ],
    embed = [":optionsui"],
    importpath = "github.com/google/chrome-ssh-agent/go/optionsui",
    deps = [
        "//go/chrome/fakes",
        "//go/dom",
        "//go/dom/testing",
        "//go/keys",
        "//go/keys/testdata",
        "@io_bazel_rules_go//go/tools/bazel",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
    ],
    testonly = True,
)

go_wasm_test(
    name = "optionsui_test",
    testlib = ":optionsui_testlib",
    node_deps = [
        "@npm//jsdom",
    ],
)
