load("//build_defs:wasm.bzl", "go_wasm_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "optionsui",
    srcs = ["ui.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/optionsui",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:js": [
            "//go/dom",
            "//go/jsutil",
            "//go/keys",
            "//go/keys/testdata",
            "@com_github_google_go_cmp//cmp",
        ],
        "//conditions:default": [],
    }),
)

go_wasm_test(
    name = "optionsui_test",
    srcs = ["ui_test.go"],
    data = [
        "//html:optionsui",
    ],
    embed = [":optionsui"],
    node_deps = [
        "//:node_modules/web-locks",
        "//:node_modules/mem-storage-area",
        "//:node_modules/jsdom",
    ],
    deps = [
        "//go/dom",
        "//go/dom/testing",
        "//go/jsutil/testing",
        "//go/keys",
        "//go/keys/testdata",
        "//go/message/fakes",
        "//go/storage",
        "//go/storage/testing",
        "//go/testutil",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@io_bazel_rules_go//go/tools/bazel",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
    ],
)
