load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutil",
    testonly = True,
    srcs = [
        "runfiles.go",
        "unzip.go",
    ],
    importpath = "github.com/google/chrome-ssh-agent/go/testutil",
    visibility = ["//visibility:public"],
    deps = ["@rules_go//go/runfiles:go_default_library"],
)
