load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e",
    srcs = [
        "e2e.go",
        "extension.go",
    ],
    data = [
        "//:chrome-ssh-agent.zip",
        "//:chrome-ssh-agent-beta.zip",
        "@chromedriver//:chromedriver_linux64/chromedriver",
        "@chromium//:chrome-linux/chrome",
    ],
    importpath = "github.com/google/chrome-ssh-agent/test",
    deps = [
        "//go/testutil",
        "@com_github_chromedp_cdproto//runtime",
        "@com_github_chromedp_chromedp//:chromedp",
    ],
)
