load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e",
    srcs = [
        "e2e.go",
        "extension.go",
    ],
    data = [
        "//:chrome-ssh-agent.zip",
        "//:chrome-ssh-agent-beta.zip",
        "@chrome_linux64//:chrome-linux64/chrome",
    ],
    importpath = "github.com/google/chrome-ssh-agent/test",
    deps = [
        "//go/testutil",
        "@com_github_chromedp_cdproto//runtime",
        "@com_github_chromedp_chromedp//:chromedp",
    ],
)
