load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "fakes",
    srcs = [
        "messaging.go",
        "storage.go",
    ],
    importpath = "github.com/google/chrome-ssh-agent/go/chrome/fakes",
    visibility = ["//visibility:public"],
)

go_wasm_test(
    name = "fakes_test",
    srcs = [
        "messaging_test.go",
        "storage_test.go",
    ],
    embed = [":fakes"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_norunners_vert//:vert",
    ],
)
