load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = ["testing.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/dom/testing",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gopherjs_gopherjs//js"],
    testonly = True,
)
