load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "testing",
    testonly = True,
    srcs = ["promise.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/jsutil/testing",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:js": [
            "//go/jsutil",
        ],
        "//conditions:default": [],
    }),
)
