load("@rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "fakes",
    testonly = True,
    srcs = ["hub.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/message/fakes",
    visibility = ["//visibility:public"],
    deps = select({
        "@rules_go//go/platform:js": [
            "//go/jsutil",
        ],
        "//conditions:default": [],
    }),
)

go_wasm_test(
    name = "fakes_test",
    srcs = ["hub_test.go"],
    embed = [":fakes"],
    deps = [
        "//go/jsutil/testing",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_norunners_vert//:vert",
    ],
)
