load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build_defs:wasm.bzl", "go_wasm_test")

go_library(
    name = "fakes",
    testonly = True,
    srcs = ["mem.go"],
    importpath = "github.com/google/chrome-ssh-agent/go/storage/fakes",
    visibility = ["//visibility:public"],
)

go_library(
    name = "fakes_testlib",
    testonly = True,
    srcs = ["mem_test.go"],
    embed = [":fakes"],
    importpath = "github.com/google/chrome-ssh-agent/go/storage/fakes",
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_norunners_vert//:vert",
    ],
)

go_wasm_test(
    name = "fakes_test",
    testlib = ":fakes_testlib",
)
